feat: Add multi-dimensional categorization, mega menu, SEO enhancements
- Add Job and Task models for tool categorization (by role/action)
- Create API routes for jobs and tasks with pagination
- Implement dynamic mega menu with By Category/Job/Task tabs
- Add sticky header with autocomplete search bar
- Update Hero section with dark AI workflow theme
- Add JSON-LD structured data for rich snippets
- Add dynamic SEO meta tag injection for tool pages
- Add GitHub Awesome list scraper for auto-import
- Create JobDetail and TaskDetail pages
- Seed initial jobs (10) and tasks (16)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,44 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FindMyAI</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- SEO Meta Tags - These will be replaced server-side for tool pages -->
+  <title><!--SEO_TITLE-->FindMyAI - Discover the Best AI Tools<!--/SEO_TITLE--></title>
+  <meta name="description"
+    content="<!--SEO_DESC-->Discover, compare, and find the best AI tools for your needs. From coding assistants to image generators, explore 3000+ AI tools.<!--/SEO_DESC-->" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="<!--SEO_URL-->https://findmyai.xyz<!--/SEO_URL-->" />
+  <meta property="og:title" content="<!--SEO_OG_TITLE-->FindMyAI - Discover the Best AI Tools<!--/SEO_OG_TITLE-->" />
+  <meta property="og:description"
+    content="<!--SEO_OG_DESC-->Discover, compare, and find the best AI tools for your needs.<!--/SEO_OG_DESC-->" />
+  <meta property="og:image" content="<!--SEO_IMAGE-->https://findmyai.xyz/og-image.png<!--/SEO_IMAGE-->" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="<!--SEO_TWITTER_URL-->https://findmyai.xyz<!--/SEO_TWITTER_URL-->" />
+  <meta name="twitter:title"
+    content="<!--SEO_TWITTER_TITLE-->FindMyAI - Discover the Best AI Tools<!--/SEO_TWITTER_TITLE-->" />
+  <meta name="twitter:description"
+    content="<!--SEO_TWITTER_DESC-->Discover, compare, and find the best AI tools for your needs.<!--/SEO_TWITTER_DESC-->" />
+  <meta name="twitter:image"
+    content="<!--SEO_TWITTER_IMAGE-->https://findmyai.xyz/og-image.png<!--/SEO_TWITTER_IMAGE-->" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="<!--SEO_CANONICAL-->https://findmyai.xyz<!--/SEO_CANONICAL-->" />
+
+  <!-- JSON-LD Structured Data - Replaced server-side for tool pages -->
+  <!--JSON_LD_SCHEMA--><!--/JSON_LD_SCHEMA-->
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
