--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,15 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-36L17DRH85"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-36L17DRH85');
+  </script>
+
   <!-- SEO Meta Tags - These will be replaced server-side for tool pages -->
   <title><!--SEO_TITLE-->FindMyAI - Discover the Best AI Tools<!--/SEO_TITLE--></title>
   <meta name="description"
