Update logo and branding to indigo theme

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/logo-icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google Analytics -->
@@ -16,7 +16,8 @@
   </script>
 
   <!-- SEO Meta Tags - These will be replaced server-side for tool pages -->
-  <title><!--SEO_TITLE-->FindMyAI - Discover the Best AI Tools<!--/SEO_TITLE--></title>
+  <!--SEO_TITLE-->
+  <title>FindMyAI - Discover the Best AI Tools</title><!--/SEO_TITLE-->
   <meta name="description"
     content="<!--SEO_DESC-->Discover, compare, and find the best AI tools for your needs. From coding assistants to image generators, explore 3000+ AI tools.<!--/SEO_DESC-->" />
 
